--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -1824,6 +1824,8 @@ CONFIG_TOUCHSCREEN_FT5336=y
 # CONFIG_TOUCHSCREEN_GT915L is not set
 # CONFIG_TOUCHSCREEN_GT917D is not set
 # CONFIG_TOUCHSCREEN_LOCKDOWN_INFO is not set
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
