--- a/arch/arm64/configs/santoni_defconfig
+++ b/arch/arm64/configs/santoni_defconfig
@@ -43,7 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Clarity-v4.0-AOSP-O-Treble"
+CONFIG_LOCALVERSION="-Clarity-v4.1-AOSP-O-Treble"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -331,7 +331,7 @@ CONFIG_ARCH_MSM8953=y
 # CONFIG_ARCH_SDM450 is not set
 CONFIG_ARCH_MSM8937=y
 # CONFIG_ARCH_MSM8996 is not set
-CONFIG_ARCH_MSMCOBALT=y
+# CONFIG_ARCH_MSMCOBALT is not set
 
 #
 # Bus support
@@ -2128,7 +2128,6 @@ CONFIG_PINCTRL_MSM=y
 # CONFIG_PINCTRL_MSM8X74 is not set
 CONFIG_PINCTRL_MSM8952=y
 CONFIG_PINCTRL_MSM8937=y
-CONFIG_PINCTRL_MSMCOBALT=y
 CONFIG_PINCTRL_MSM8917=y
 CONFIG_PINCTRL_MSM8940=y
 CONFIG_PINCTRL_MSM8953=y
@@ -4312,6 +4311,7 @@ CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 # CONFIG_TEST_UDELAY is not set
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_MEMTEST is not set
+# CONFIG_CC_WERROR is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
@@ -4496,6 +4496,7 @@ CONFIG_ARM64_CRYPTO=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_GHASH_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64=y
 CONFIG_CRYPTO_AES_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
